# refivar

./: .gitignore  Cargo.toml  README.md  build.rs  meson.build
src/lib/efivar/: efi_guids.rs  efi_guids_list_path.rs.in  efi_variable_attributes.rs  efivar_display.rs  guids.json  mod.rs
src/lib/efivar/efivar/: efi_variables.rs  mod.rs
src/lib/efivar/efivarfs/: efi_variables.rs  mod.rs
src/lib/efivar/print_mode/: decimal.rs  mod.rs  verbose.rs
src/lib/efivar/types/: efi_guid.rs  efi_guid_error.rs  efi_guid_list_entry.rs  efi_variable.rs  efi_variable_attribute.rs  efivar_attribute.rs  mod.rs  print_mode.rs
src/lib/rust-argparse/: LICENSE
src/lib/rust-argparse/src/: parser.rs
subprojects/: anstyle-rs.wrap  bitflags-rs.wrap  clap-rs.wrap  clap_builder-rs.wrap  clap_lex-rs.wrap  ignore-result--rs.wrap  ignore-result-rs.wrap  indoc-rs.wrap  io-lifetimes-rs.wrap  itoa-rs.wrap  libc-rs.wrap  linux-raw-sys-rs.wrap  proc-macro2-rs.wrap  quote-rs.wrap  rustix-rs.wrap  ryu-rs.wrap  serde-rs.wrap  serde_derive-rs.wrap  serde_json-rs.wrap  syn-rs.wrap  terminal_size-rs.wrap  unicode-ident-rs.wrap  unindent-rs.wrap
subprojects/packagefiles/anstyle-1.0.0/: meson.build
subprojects/packagefiles/bitflags-1.3.2/: meson.build
subprojects/packagefiles/clap-4.3.0/: meson.build
subprojects/packagefiles/clap_builder-4.3.0/: meson.build
subprojects/packagefiles/clap_lex-0.5.0/: meson.build
subprojects/packagefiles/ignore-result-0.2.0/: meson.build
subprojects/packagefiles/indoc-2.0.3/: meson.build
subprojects/packagefiles/io-lifetimes-1.0.10/: meson.build
subprojects/packagefiles/itoa-1.0.6/: meson.build
subprojects/packagefiles/libc-0.2.144/: meson.build
subprojects/packagefiles/linux-raw-sys-0.3.8/: meson.build
subprojects/packagefiles/proc-macro2-1.0.58/: meson.build
subprojects/packagefiles/quote-1.0.27/: meson.build
subprojects/packagefiles/rustix-0.37.19/: meson.build
subprojects/packagefiles/ryu-1.0.13/: meson.build
subprojects/packagefiles/serde-1.0.163/: meson.build
subprojects/packagefiles/serde_derive-1.0.163/: meson.build
subprojects/packagefiles/serde_json-1.0.96/: meson.build
subprojects/packagefiles/syn-2.0.16/: meson.build
subprojects/packagefiles/terminal_size-0.2.6/: meson.build
subprojects/packagefiles/unicode-ident-1.0.8/: meson.build
subprojects/packagefiles/unindent-0.2.1/: meson.build
subprojects/rust-argparse-v0.2.2_p20181221/: meson.build
subprojects/rust-argparse-v0.2.2_p20230209/: meson.build
