[package]
name = "refivar"
version = "0.1.0"
edition = "2021"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[lib]
name = "efivar"
path = "src/lib/efivar/mod.rs"
crate-type = ["lib"]

[[bin]]
name = "efivar"
path = "src/bin/efivar.rs"

[dependencies]
clap = { version = "4.1.13", default-features = false, features = ["std"] }
